--- a/Gradle/JavaGradle/build.gradle
+++ b/Gradle/JavaGradle/build.gradle
@@ -49,12 +49,21 @@ task runFraction(type: JavaExec) {
   classpath = sourceSets.main.runtimeClasspath
 
   main = 'Fraction'
+  
+    // default values for numerator and denominator
+  if (project.hasProperty("denom") && project.hasProperty("num")) {
+    args(project.getProperty('num'), project.getProperty('denom'));
+  } else if (project.hasProperty("num")){
+    args(project.getProperty('num'), 1);
+  } else if (project.hasProperty("denom")){
+    args(1,project.getProperty('denom'));
+  }else {
+    args 1,1
+  }
 }
 
-// Try:
-// 1. Change Fraction.main so it accepts 2 arguments
-// 2. Create a new gradle tasks that accepts two arguments and 
-//    can be called as: gradle runFrac -Pdenom=4 -Pnum=3 or as gradle runFrac -Pnum=3 -Pdenom=4 , also make sure it can run with only 1 or no arguments
+
+// Can be called as: gradle runFrac -Pdenom=4 -Pnum=3 or as gradle runFrac -Pnum=3 -Pdenom=4 , also make sure it can run with only 1 or no arguments
 
 // Example how you can add that libraries can be pulled from mavenCentral()
 // repositories {
